--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -2,7 +2,11 @@
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name: Shopify
   link: https://www.shopify.ca/
-  date: July 2019 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
+  date: August 2022 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
+  job: Senior Data Scientist
+- name: Shopify
+  link: https://www.shopify.ca/
+  date: July 2019 - August 2022
   job: Data Scientist
 
 - name: SharpestMinds
