--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ kramdown:
 owner:
   name: Data Musings 
   avatar: kunal.png
-  job: "Making stories with Data @Shopify"
+  job: "Making stories with Data"
   # bio: "Ideas and other geeky stuff"
   email:
   disqus-shortname:
